--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!--<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />-->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />-->
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />-->
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,17 +25,35 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <link rel="preload" href="css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="css/styles.css"></noscript>
-
-    <link rel="preload" href="css/tailwind.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="css/tailwind.min.css"></noscript>
+    <link rel="preload" href="%PUBLIC_URL%/images/blocks/banner-01.png" as="image">
+    <link rel="preload" href="%PUBLIC_URL%/images/blocks/content-01.png" as="image">
+    <link rel="preload" href="%PUBLIC_URL%/images/blocks/footer-01.png" as="image">
+    <link rel="preload" href="%PUBLIC_URL%/images/blocks/header-01.png" as="image">
+    <link rel="preload" href="%PUBLIC_URL%/images/blocks/header-02.png" as="image">
 
     <title>...</title>
+
+    <style>
+      .load-text {
+        color: #6B7280;
+        font-weight: 700;
+      }
+      .load-wrapper {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        height: 100vh;
+      }
+    </style>
   </head>
   <body class="bg-gray-100">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <div class="flex flex-col items-center justify-center h-screen animate-ping load-wrapper">
+        <div class="text-gray-500 font-bold load-text">Theen Wind</div>
+      </div>
+    </div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
@@ -46,5 +64,11 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <link rel="preload" href="%PUBLIC_URL%/css/styles.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="%PUBLIC_URL%/css/styles.css"></noscript>
+
+    <link rel="preload" href="%PUBLIC_URL%/css/tailwind.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="%PUBLIC_URL%/css/tailwind.min.css"></noscript>
   </body>
 </html>
