--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,9 @@
     <link rel="preload" href="%PUBLIC_URL%/images/blocks/header-01.png" as="image">
     <link rel="preload" href="%PUBLIC_URL%/images/blocks/header-02.png" as="image">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+
     <title>...</title>
 
     <style>
