--- a/public/index.html
+++ b/public/index.html
@@ -24,15 +24,19 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://dummyimage.com" />
 
     <link rel="preload" href="%PUBLIC_URL%/images/blocks/banner-01.png" as="image">
+    <link rel="preload" href="%PUBLIC_URL%/images/blocks/banner-02.png" as="image">
     <link rel="preload" href="%PUBLIC_URL%/images/blocks/content-01.png" as="image">
+    <link rel="preload" href="%PUBLIC_URL%/images/blocks/cta-01.png" as="image">
     <link rel="preload" href="%PUBLIC_URL%/images/blocks/footer-01.png" as="image">
     <link rel="preload" href="%PUBLIC_URL%/images/blocks/header-01.png" as="image">
     <link rel="preload" href="%PUBLIC_URL%/images/blocks/header-02.png" as="image">
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preload" href="%PUBLIC_URL%/images/blocks/header-03.png" as="image">
+    <link rel="preload" href="%PUBLIC_URL%/images/blocks/header-04.png" as="image">
 
     <title>...</title>
 
