--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <link rel="preload" href="%PUBLIC_URL%/images/blocks/header-03.png" as="image">
     <link rel="preload" href="%PUBLIC_URL%/images/blocks/header-04.png" as="image">
 
-    <title>...</title>
+    <title>Theen Wind</title>
 
     <style>
       .load-text {
